--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ button.select { background-color: rgba(255, 255, 255, 0.5); }
 
 #base_wrapper { position: relative; width: 100%; height: 100%; top: 0; left: 0; }
 
-#scope { position: absolute; width: 65vmin; height: 65vmin; left: 50%; top: 50%; transform: translate(-50%, -50%); border-radius: 50%; overflow: hidden; }
+#scope { position: absolute; width: 65vmin; height: 65vmin; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); border-radius: 50%; overflow: hidden; }
 
 #baseframe { width: 100%; height: 100%; position: absolute; left: 0; top: 0; border: none; }
 
@@ -18,7 +18,7 @@ button.select { background-color: rgba(255, 255, 255, 0.5); }
 
 #base_wrapper { position: absolute; top: 0; left: 0; }
 
-#scopewaku { position: absolute; left: 50%; top: 50%; width: 70vmin; height: 70vmin; transform: translate(-50%, -50%); background-repeat: no-repeat; background-size: contain; background-position: center; }
+#scopewaku { position: absolute; left: 50%; top: 50%; width: 70vmin; height: 70vmin; -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); background-repeat: no-repeat; background-size: contain; background-position: center; }
 
 #scopering { width: 100%; height: 100%; }
 
@@ -37,31 +37,31 @@ button.select { background-color: rgba(255, 255, 255, 0.5); }
 
 .ruler { background-image: url('data:image/svg+xml;utf8,<svg width="50" height="30" xmlns="http://www.w3.org/2000/svg"><g><line fill="none" stroke="#ffffff" stroke-width="1.5" x1="25.8125" y1="13.54159" x2="25.8125" y2="0.03935" id="svg_2" stroke-linejoin="undefined" stroke-linecap="undefined"/><line fill="none" stroke-width="1.5" x1="32.06246" y1="8.79161" x2="32.06246" y2="0.03935" id="svg_4" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="38.31243" y1="8.79161" x2="38.31243" y2="0.03935" id="svg_5" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="44.81239" y1="8.79161" x2="44.81239" y2="0.03935" id="svg_6" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="19.43753" y1="8.79161" x2="19.43753" y2="0.03935" id="svg_11" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="6.9376" y1="8.79161" x2="6.9376" y2="0.03935" id="svg_13" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke-width="1.5" x1="13.43757" y1="8.79161" x2="13.43757" y2="0.03935" id="svg_14" stroke-linejoin="undefined" stroke-linecap="undefined" stroke="#ffffff"/><line fill="none" stroke="#ffffff" stroke-width="1.5" x1="0.68763" y1="13.54159" x2="0.68763" y2="0.03935" id="svg_15" stroke-linejoin="undefined" stroke-linecap="undefined"/></g></svg>'); }
 
-.radiussliderbase { position: absolute; top: 8px; background-color: rgba(0, 0, 0, 0.8); padding: 0 5px 10px 5px; border-radius: 10px; border: 2px solid #fff; left: 50%; transform: translateX(-50%); }
-.radiussliderbase .ruler { background-repeat: repeat-x; background-position: center top; background-color: rgba(0, 0, 0, 0.3); position: relative; left: 50%; transform: translateX(-50%); height: 50px; width: 300px; }
+.radiussliderbase { position: absolute; top: 8px; background-color: rgba(0, 0, 0, 0.8); padding: 0 5px 10px 5px; border-radius: 10px; border: 2px solid #fff; left: 50%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); }
+.radiussliderbase .ruler { background-repeat: repeat-x; background-position: center top; background-color: rgba(0, 0, 0, 0.3); position: relative; left: 50%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); height: 50px; width: 300px; }
 
 .radiusSliderbutt { height: 40px; width: 80px; min-width: 80px; background-color: #fff; box-sizing: border-box; border: 1px #fff outset; position: absolute; text-align: center; bottom: 0; left: 0; font-size: 20px; color: #000; line-height: 20px; }
 
-.sliderBase { background-repeat: repeat-x; background-position: center top; background-color: rgba(0, 0, 0, 0.3); position: relative; left: 50%; transform: translateX(-50%); height: 43px; width: 300px; }
+.sliderBase { background-repeat: repeat-x; background-position: center top; background-color: rgba(0, 0, 0, 0.3); position: relative; left: 50%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); height: 43px; width: 300px; }
 
 .sliderButt { height: 30px; width: 80px; min-width: 80px; background-color: #fff; box-sizing: border-box; border: 1px #fff outset; position: absolute; text-align: center; bottom: 0; left: 0; font-size: 20px; color: #000; line-height: 20px; }
 
-#moveIng { position: absolute; width: 70vmin; height: 4vmin; left: 50%; transform: translateX(-50%); background-color: rgba(0, 0, 0, 0.58); }
+#moveIng { position: absolute; width: 70vmin; height: 4vmin; left: 50%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); background-color: rgba(0, 0, 0, 0.58); }
 #moveIng #ingBar { content: ''; background-color: yellow; position: absolute; height: 2vmin; }
 
-#dragSliderset { background-repeat: repeat-x; background-position: center top; background-color: rgba(0, 0, 0, 0.3); position: absolute; left: 50%; transform: translateX(-50%); height: 16vmin; width: 70vmin; color: #fff; text-align: center; font-size: 12px; line-height: 120px; }
+#dragSliderset { background-repeat: repeat-x; background-position: center top; background-color: rgba(0, 0, 0, 0.3); position: absolute; left: 50%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); height: 16vmin; width: 70vmin; color: #fff; text-align: center; font-size: 12px; line-height: 120px; }
 
 #dragSliderbutt { height: 40px; width: 80px; min-width: 80px; background-color: #fff; box-sizing: border-box; border: 1px #fff outset; position: absolute; text-align: center; bottom: 0; font-size: 20px; color: #000; line-height: 20px; }
 
 @media screen and (orientation: landscape) { #moveIng { bottom: 19vmin; }
   #sliderset { width: 42px; height: 50vmin; bottom: 4vmin; left: 40px; }
   #sliderset div { width: 40px; height: 80px; min-height: 80px; background-color: rgba(255, 255, 255, 0.8); top: calc(50vmin - 80px); }
-  #sliderset div.ret { transition: top 0.3s cubic-bezier(0.01, 0.56, 0.25, 1) 0s; top: calc(50vmin - 80px); }
+  #sliderset div.ret { -webkit-transition: top 0.3s cubic-bezier(0.01, 0.56, 0.25, 1) 0s; transition: top 0.3s cubic-bezier(0.01, 0.56, 0.25, 1) 0s; top: calc(50vmin - 80px); }
   #dragSliderset { bottom: 5vmin; } }
 @media screen and (orientation: portrait) { #moveIng { bottom: 34vmin; }
   #sliderset { height: 42px; width: 50vmin; bottom: 5vmin; left: 5vmin; }
   #sliderset div { height: 40px; width: 80px; min-width: 80px; background-color: #fff; top: 0; }
-  #sliderset div.ret { transition: left 0.3s cubic-bezier(0.01, 0.56, 0.25, 1) 0s; left: 0px; }
+  #sliderset div.ret { -webkit-transition: left 0.3s cubic-bezier(0.01, 0.56, 0.25, 1) 0s; transition: left 0.3s cubic-bezier(0.01, 0.56, 0.25, 1) 0s; left: 0px; }
   #dragSliderset { bottom: 20vmin; } }
 #shootbut { position: absolute; display: block; right: 20px; bottom: 27%; width: 16vmin; height: 16vmin; border: 4px solid #fff; background-color: rgba(255, 255, 255, 0.8); border-radius: 50%; }
 
@@ -79,20 +79,20 @@ button.select { background-color: rgba(255, 255, 255, 0.5); }
 #menu figure { font-size: 20px; color: #fff; padding-top: 10px; }
 #menu figure figcaption { text-align: center; padding: 5px; font-size: 17px; }
 #menu #setring { padding-top: 5px; font-size: 20px; text-align: center; }
-#menu ul { display: flex; justify-content: center; list-style: none; }
+#menu ul { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; list-style: none; }
 #menu ul li button { font-size: 25px; color: #fff; border: solid #fff 2px; height: 40px; }
 #menu ul#kind li button { font-size: 15px; }
 #menu #scopeToggles li { text-align: center; }
-#menu .togglebase { display: inline-block; width: 80px; height: 40px; background-color: #b4b4b4; border-radius: 20px; padding-left: 40px; position: relative; transition: background-color 0.3s ease 0s; }
+#menu .togglebase { display: inline-block; width: 80px; height: 40px; background-color: #b4b4b4; border-radius: 20px; padding-left: 40px; position: relative; -webkit-transition: background-color 0.3s ease 0s; transition: background-color 0.3s ease 0s; }
 #menu .togglebase.active { background-color: #ff9242; }
-#menu .togglebase .togglenob { position: absolute; width: 40px; height: 40px; background-color: #fff; border-radius: 50%; border: 1px solid #ccc; left: 50%; transition: left 0.3s ease 0s; box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.23); }
+#menu .togglebase .togglenob { position: absolute; width: 40px; height: 40px; background-color: #fff; border-radius: 50%; border: 1px solid #ccc; left: 50%; -webkit-transition: left 0.3s ease 0s; transition: left 0.3s ease 0s; box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.23); }
 #menu .togglebase.active .togglenob { left: 0; }
 #menu #typetoggle.togglebase { background-color: #ff9242; vertical-align: middle; }
 #menu #typetoggle.togglebase.active { background-color: #ff9242; }
 #menu #scopeToggles { padding-top: 20px; }
 #menu #onRing, #menu #onDot { text-align: center; position: relative; }
 #menu #colorchip { text-align: center; padding: 20px 0 0; }
-#menu #colorchip a { display: inline-block; margin: 0 8px; height: 40px; width: 40px; border: 2px solid #fff; border-radius: 50%; transition: all 0.5s ease 0s; }
+#menu #colorchip a { display: inline-block; margin: 0 8px; height: 40px; width: 40px; border: 2px solid #fff; border-radius: 50%; -webkit-transition: all 0.5s ease 0s; transition: all 0.5s ease 0s; }
 #menu #colorchip a.active { border: 4px solid #fff; border-radius: 0px; }
 #menu #colorchip a.orange { background-color: #ff9242; }
 #menu #colorchip a.yellow { background-color: #e2ff42; }
@@ -100,39 +100,37 @@ button.select { background-color: rgba(255, 255, 255, 0.5); }
 #menu #colorchip a.black { background-color: #464646; }
 #menu #colorchip a.frost { background-color: #f4fcff; }
 #menu #radius { padding: 10px; text-align: center; position: relative; }
-#menu span.number { display: inline-block; width: 80px; height: 30px; font-size: 25px; line-height: 30px; text-align: center; vertical-align: middle; border-bottom: 2px solid #fff; transition: background 0.4s ease 0s; }
+#menu span.number { display: inline-block; width: 80px; height: 30px; font-size: 25px; line-height: 30px; text-align: center; vertical-align: middle; border-bottom: 2px solid #fff; -webkit-transition: background 0.4s ease 0s; transition: background 0.4s ease 0s; }
 #menu span.number.active { background-color: #e2ff42; color: #000; }
 #menu #markpre { padding-top: 5px; }
-#menu #prewrapper { position: relative; width: 300px; height: 200px; left: 50%; transform: translateX(-50%); background-color: rgba(255, 255, 255, 0.5); overflow: hidden; border-radius: 10px; }
-#menu #pretarget, #menu #prescopewaku { position: absolute; left: 50%; top: 0; width: 70vmin; height: 100%; transform: translateX(-50%); background-repeat: no-repeat; background-size: cover; background-position: center; }
+#menu #prewrapper { position: relative; width: 300px; height: 200px; left: 50%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); background-color: rgba(255, 255, 255, 0.5); overflow: hidden; border-radius: 10px; }
+#menu #pretarget, #menu #prescopewaku { position: absolute; left: 50%; top: 0; width: 70vmin; height: 100%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); background-repeat: no-repeat; background-size: cover; background-position: center; }
 #menu #prescopepin { width: 100%; height: 100%; position: absolute; top: 0; background-image: url(images/scopepin.png); background-size: cover; background-repeat: no-repeat; background-position: center; }
 #menu #presvg { width: 100%; height: 100%; position: relative; }
 
-#deb { position: absolute; top: 70px; left: 50%; width: 50%; min-height: 30%; transform: translateX(-50%); color: #fff; background-color: rgba(0, 0, 0, 0.8); font-size: 9px; }
+#deb { position: absolute; top: 70px; left: 50%; width: 50%; min-height: 30%; -webkit-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%); color: #fff; background-color: rgba(0, 0, 0, 0.8); font-size: 9px; }
 
 #mask { position: absolute; width: 100vw; height: 100vh; top: 0; left: 0; background-color: #000; z-index: 1000; }
 
 #splash { position: absolute; width: 100vw; height: 100vh; top: 0; left: 0; background-color: #fff; z-index: 1003; }
-#splash.fade-enter-active { transition: opacity 0.8s cubic-bezier(0.24, 0.2, 0.57, 0.6); }
-#splash.fade-leave-active { transition: opacity 2s cubic-bezier(0.24, 0.2, 0.57, 0.6); }
+#splash.fade-enter-active { -webkit-transition: opacity 0.8s cubic-bezier(0.24, 0.2, 0.57, 0.6); transition: opacity 0.8s cubic-bezier(0.24, 0.2, 0.57, 0.6); }
+#splash.fade-leave-active { -webkit-transition: opacity 1s cubic-bezier(0.24, 0.2, 0.57, 0.6); transition: opacity 1s cubic-bezier(0.24, 0.2, 0.57, 0.6); }
 #splash.fade-enter, #splash.fade-leave-to { opacity: 0; }
-#splash > div { -webkit-animation: zoom 3s cubic-bezier(0.1, 0.48, 0.47, 1) alternate 1s; -moz-animation: zoom 3s cubic-bezier(0.1, 0.48, 0.47, 1) alternate 1s; animation: zoom 3s cubic-bezier(0.1, 0.48, 0.47, 1) alternate 1s; -webkit-animation-fill-mode: both; -moz-animation-fill-mode: both; animation-fill-mode: both; position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -o-transform: translate(-50%, -50%); transform: translate(-50%, -50%); text-align: center; }
+#splash > div { -webkit-animation: zoom 3s cubic-bezier(0.1, 0.48, 0.47, 1) alternate 1s; animation: zoom 3s cubic-bezier(0.1, 0.48, 0.47, 1) alternate 1s; -webkit-animation-fill-mode: both; animation-fill-mode: both; position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); text-align: center; }
 #splash > div > div { font-size: 133%; white-space: nowrap; position: relative; margin-bottom: 2vmin; font-weight: bold; }
 #splash > div > div span { font-size: 40%; position: absolute; bottom: -2vmin; right: 0vmin; }
-#splash > div img { display: block; margin: 2vmax auto; -webkit-animation: yurayura 0.3s cubic-bezier(0.53, 0.01, 0.47, 1) infinite alternate 0s; -moz-animation: yurayura 0.3s cubic-bezier(0.53, 0.01, 0.47, 1) infinite alternate 0s; animation: yurayura 0.3s cubic-bezier(0.53, 0.01, 0.47, 1) infinite alternate 0s; -webkit-animation-fill-mode: both; -moz-animation-fill-mode: both; animation-fill-mode: both; }
+#splash > div img { display: block; margin: 2vmax auto; -webkit-animation: yurayura 0.3s cubic-bezier(0.53, 0.01, 0.47, 1) infinite alternate 0s; animation: yurayura 0.3s cubic-bezier(0.53, 0.01, 0.47, 1) infinite alternate 0s; -webkit-animation-fill-mode: both; animation-fill-mode: both; }
 #splash > div span { font-size: 60%; white-space: nowrap; }
 #splash .closecopy { position: absolute; width: 7vmin; height: 7vmin; top: 12vmin; left: 12vmin; background-position: center; background-repeat: no-repeat; background-size: contain; background-image: url(../images/closecopy.svg); background-size: contain; cursor: pointer; -webkit-tap-highlight-color: transparent !important; }
 #splash .closecopy:active, #splash .closecopy:focus { outline: 0; opacity: 0.5; }
 
 @-webkit-keyframes zoom { 0% { opacity: 0; }
   100% { opacity: 1; } }
-@-moz-keyframes zoom { 0% { opacity: 0; }
-  100% { opacity: 1; } }
 @keyframes zoom { 0% { opacity: 0; }
   100% { opacity: 1; } }
-@-webkit-keyframes yurayura { 0% { -webkit-transform: rotate(-20deg); -moz-transform: rotate(-20deg); -o-transform: rotate(-20deg); transform: rotate(-20deg); }
-  100% { -webkit-transform: rotate(20deg); -moz-transform: rotate(20deg); -o-transform: rotate(20deg); transform: rotate(20deg); } }
-@-moz-keyframes yurayura { 0% { -webkit-transform: rotate(-20deg); -moz-transform: rotate(-20deg); -o-transform: rotate(-20deg); transform: rotate(-20deg); }
-  100% { -webkit-transform: rotate(20deg); -moz-transform: rotate(20deg); -o-transform: rotate(20deg); transform: rotate(20deg); } }
-@keyframes yurayura { 0% { -webkit-transform: rotate(-20deg); -moz-transform: rotate(-20deg); -o-transform: rotate(-20deg); transform: rotate(-20deg); }
-  100% { -webkit-transform: rotate(20deg); -moz-transform: rotate(20deg); -o-transform: rotate(20deg); transform: rotate(20deg); } }
+@-webkit-keyframes yurayura { 0% { -webkit-transform: rotate(-20deg); transform: rotate(-20deg); }
+  100% { -webkit-transform: rotate(20deg); transform: rotate(20deg); } }
+@keyframes yurayura { 0% { -webkit-transform: rotate(-20deg); transform: rotate(-20deg); }
+  100% { -webkit-transform: rotate(20deg); transform: rotate(20deg); } }
+
+/*# sourceMappingURL=main.css.map */
